--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -42,6 +42,87 @@
         })
     </div>
 </div>
-<div></div>
+<div class="our_products">
+    <div class="our_products_text">Our products</div>
+    <div class="our_products_all_card">
+        <div class="our_products_part_card1">
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/Ellipse3",
+            "img2": "./assets/images/card_2",
+            "text": "Syltherine",
+            "text_2": "Stylish cafe chair",
+            "text3": "Rp 2.500.000",
+            "text4": "Rp 3.500.000",
+            "new": "-30%"
+            })
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/none",
+            "img2": "./assets/images/lampa",
+            "text": "Leviosa",
+            "text_2": "Stylish cafe chair",
+            "text3": "Rp 2.500.000",
+            "text4": "",
+            "new": ""
+
+            })
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/Ellipse3",
+            "img2": "./assets/images/lampa",
+            "text": "Lolito",
+            "text_2": "Luxury big sofa",
+            "text3": "Rp 7.000.000",
+            "text4": "Rp 14.000.000",
+            "new": "-50%"
+            })
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/zel_crug",
+            "img2": "./assets/images/card_2",
+            "text": "Respira",
+            "text_2": "Outdoor bar table and stool",
+            "text3": "Rp 500.000",
+            "text4": "",
+            "new": "New"
+            })
+        </div>
+        <div class="our_products_part_card2">
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/none",
+            "img2": "./assets/images/lampa",
+            "text": "Grifo",
+            "text_2": "Night lamp",
+            "text3": "Rp 1.500.000",
+            "text4": "",
+            "new": ""
+            })
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/zel_crug",
+            "img2": "./assets/images/bed",
+            "text": "Muggo",
+            "text_2": "Small mug",
+            "text3": "Rp 2.500.000",
+            "text4": "Rp 3.500.000",
+            "new": "New"
+            })
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/Ellipse3",
+            "img2": "./assets/images/divan",
+            "text": "Pingky",
+            "text_2": "Cute bed set",
+            "text3": "Rp 7.000.000",
+            "text4": "Rp 14.000.000",
+            "new": "-50%"
+            })
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/zel_crug",
+            "img2": "./assets/images/card_2",
+            "text": "Potty",
+            "text_2": "Minimalist flower pot",
+            "text3": "Rp 500.000",
+            "text4": "",
+            "new": "New"
+            })
+        </div>
+    </div>
+</div>
 </body>
 </html>
