--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -67,7 +67,7 @@
             })
             @@include('../components/_card2.html', {
             "img": "./assets/images/Ellipse3",
-            "img2": "./assets/images/lampa",
+            "img2": "./assets/images/divan2",
             "text": "Lolito",
             "text_2": "Luxury big sofa",
             "text3": "Rp 7.000.000",
@@ -76,7 +76,7 @@
             })
             @@include('../components/_card2.html', {
             "img": "./assets/images/zel_crug",
-            "img2": "./assets/images/card_2",
+            "img2": "./assets/images/divan3",
             "text": "Respira",
             "text_2": "Outdoor bar table and stool",
             "text3": "Rp 500.000",
@@ -96,7 +96,7 @@
             })
             @@include('../components/_card2.html', {
             "img": "./assets/images/zel_crug",
-            "img2": "./assets/images/bed",
+            "img2": "./assets/images/divan4",
             "text": "Muggo",
             "text_2": "Small mug",
             "text3": "Rp 2.500.000",
@@ -114,13 +114,100 @@
             })
             @@include('../components/_card2.html', {
             "img": "./assets/images/zel_crug",
-            "img2": "./assets/images/card_2",
+            "img2": "./assets/images/divan5",
             "text": "Potty",
             "text_2": "Minimalist flower pot",
             "text3": "Rp 500.000",
             "text4": "",
             "new": "New"
             })
+        </div>
+    </div>
+    <div class="expand_button_our_products">
+        @@include('../components/_button1.html')
+    </div>
+</div>
+<div class="inspirations">
+    <div class="container_inspirations_text">
+        <div class="inspirations_content1">50+ Beautiful rooms<br>
+            inspiration</div>
+        <div class="inspirations_content2">Our designer already made a lot of beautiful<br> prototipe of rooms that inspire you</div>
+        <button class="inspirations_button1">Explore More</button>
+    </div>
+    <div class="inspirations_container_img1">
+        <div class="inspirations_container_img2">
+            <div>
+                <img src="../assets/images/perv.webp">
+            </div>
+            <div class="inspirations_container_img3">
+                <div class="inspirations_content_3">
+                    <div class="text_inspirations"> 01 — Bed Room</div>
+                    <div class="text_inspirations2">Inner Peace</div>
+                </div>
+                <div class="inspirations_content4">
+                    <button class="inspirations_button2">
+                        <img src="../assets/images/strelka.webp">
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div>
+                <img src="../assets/images/sred.webp" class="inspirations_img">
+                <button class="inspirations_btn1">
+                    <img src="../assets/images/strel2.webp">
+                </button>
+                <img src="../assets/images/posl.webp" class="inspirations_img2">
+            </div>
+            <div class="inspirations_btn2_container">
+                <button class="inspirations_btn2">
+                    <img src="../assets/images/Active.webp">
+                </button>
+                <button class="inspirations_btn2">
+                    <img src="../assets/images/dont_active.webp">
+                </button>
+                <button class="inspirations_btn2">
+                    <img src="../assets/images/dont_active.webp">
+                </button>
+                <button class="inspirations_btn2">
+                    <img src="../assets/images/dont_active.webp">
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="share_block">
+    <div class="container_share">
+        <div class="share_content">Share your setup with</div>
+        <div class="share_content2">#FuniroFurniture</div>
+    </div>
+    <div class="share_container_img">
+        <div class="share_img">
+            <img src="../assets/images/share_img (1).webp">
+        </div>
+        <div class="share_img2">
+            <img src="../assets/images/share_img (2).webp">
+        </div>
+        <div class="share_img3">
+            <img src="../assets/images/share_img (3).webp">
+        </div>
+        <div class="share_img4">
+            <img src="../assets/images/share_img (4).webp">
+        </div>
+        <div class="share_img5">
+            <img src="../assets/images/share_img (5).webp">
+        </div>
+        <div class="share_img6">
+            <img src="../assets/images/share_img (6).webp">
+        </div>
+        <div class="share_img7">
+            <img src="../assets/images/share_img (7).webp">
+        </div>
+        <div class="share_img8">
+            <img src="../assets/images/share_img (8).webp">
+        </div>
+        <div class="share_img9">
+            <img src="../assets/images/share_img (9).webp">
         </div>
     </div>
 </div>
