--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -211,5 +211,9 @@
         </div>
     </div>
 </div>
+<div class="footer">
+    @@include('../components/_footer.html')
+</div>
+
 </body>
 </html>
