--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Shop</title>
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main.css"/>
 </head>
 <body>
 @@include('../components/_header.html')
+@@include('../components/_banner.html', {
+"text": "Shop"
+})
 </body>
 </html>
