--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -57,7 +57,7 @@
             })
             @@include('../components/_card2.html', {
             "img": "./assets/images/none",
-            "img2": "./assets/images/lampa",
+            "img2": "./assets/images/stul",
             "text": "Leviosa",
             "text_2": "Stylish cafe chair",
             "text3": "Rp 2.500.000",
