сидела двое суток, а ща лол не открывает гулп перезапустила)))

--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -10,5 +10,231 @@
 @@include('../components/_banner.html', {
 "text": "Shop"
 })
+<div class="filter-section">
+    <div class="filter-section__left">
+        <button class="filter-section__button filter-section__button--filter">
+            <i class="icon-filter">
+                <img src="../assets/images/filtr.webp">
+            </i>
+            Filter
+        </button>
+        <button class="filter-section__button filter-section__button--grid">
+            <i class="icon-grid">
+                <img src="../assets/images/tochki.webp">
+            </i>
+        </button>
+        <button class="filter-section__button filter-section__button--list">
+            <i class="icon-list">
+                <img src="../assets/images/list.webp">
+            </i>
+        </button>
+        <span class="filter-section__results">Showing 1-16 of 32 results</span>
+    </div>
+    <div class="filter-section__right">
+        <div class="filter-section__show">
+            <span>Show</span>
+            <select class="filter-section__select">
+                <option value="16">16</option>
+            </select>
+        </div>
+        <div class="filter-section__sort">
+            <span>Sort by</span>
+            <select class="filter-section__select1">
+                <option value="default">Default</option>
+            </select>
+        </div>
+    </div>
+</div>
+<section class="our-products">
+    <div class="our-products__cards-container">
+        <div class="our-products__card-group our-products__card-group--left">
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/Ellipse3",
+            "img2": "./assets/images/card_2",
+            "text": "Syltherine",
+            "text_2": "Stylish cafe chair",
+            "text3": "Rp 2.500.000",
+            "text4": "Rp 3.500.000",
+            "new": "-30%"
+            })
+
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/none",
+            "img2": "./assets/images/stul",
+            "text": "Leviosa",
+            "text_2": "Stylish cafe chair",
+            "text3": "Rp 2.500.000",
+            "text4": "",
+            "new": ""
+            })
+
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/Ellipse3",
+            "img2": "./assets/images/divan2",
+            "text": "Lolito",
+            "text_2": "Luxury big sofa",
+            "text3": "Rp 7.000.000",
+            "text4": "Rp 14.000.000",
+            "new": "-50%"
+            })
+
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/zel_crug",
+            "img2": "./assets/images/divan3",
+            "text": "Respira",
+            "text_2": "Outdoor bar table and stool",
+            "text3": "Rp 500.000",
+            "text4": "",
+            "new": "New"
+            })
+        </div>
+        <div class="our-products__card-group our-products__card-group--right">
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/Ellipse3",
+            "img2": "./assets/images/card_2",
+            "text": "Syltherine",
+            "text_2": "Stylish cafe chair",
+            "text3": "Rp 2.500.000",
+            "text4": "Rp 3.500.000",
+            "new": "-30%"
+            })
+
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/none",
+            "img2": "./assets/images/stul",
+            "text": "Leviosa",
+            "text_2": "Stylish cafe chair",
+            "text3": "Rp 2.500.000",
+            "text4": "",
+            "new": ""
+            })
+
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/Ellipse3",
+            "img2": "./assets/images/divan2",
+            "text": "Lolito",
+            "text_2": "Luxury big sofa",
+            "text3": "Rp 7.000.000",
+            "text4": "Rp 14.000.000",
+            "new": "-50%"
+            })
+
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/zel_crug",
+            "img2": "./assets/images/divan3",
+            "text": "Respira",
+            "text_2": "Outdoor bar table and stool",
+            "text3": "Rp 500.000",
+            "text4": "",
+            "new": "New"
+            })
+        </div>
+        <div class="our-products__card-group our-products__card-group--right">
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/Ellipse3",
+            "img2": "./assets/images/card_2",
+            "text": "Syltherine",
+            "text_2": "Stylish cafe chair",
+            "text3": "Rp 2.500.000",
+            "text4": "Rp 3.500.000",
+            "new": "-30%"
+            })
+
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/none",
+            "img2": "./assets/images/stul",
+            "text": "Leviosa",
+            "text_2": "Stylish cafe chair",
+            "text3": "Rp 2.500.000",
+            "text4": "",
+            "new": ""
+            })
+
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/Ellipse3",
+            "img2": "./assets/images/divan2",
+            "text": "Lolito",
+            "text_2": "Luxury big sofa",
+            "text3": "Rp 7.000.000",
+            "text4": "Rp 14.000.000",
+            "new": "-50%"
+            })
+
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/zel_crug",
+            "img2": "./assets/images/divan3",
+            "text": "Respira",
+            "text_2": "Outdoor bar table and stool",
+            "text3": "Rp 500.000",
+            "text4": "",
+            "new": "New"
+            })
+        </div>
+        <div class="our-products__card-group our-products__card-group--right">
+            <a href="Single_Product.html">
+                @@include('../components/_card2.html', {
+                "img": "./assets/images/Ellipse3",
+                "img2": "./assets/images/card_2",
+                "text": "Syltherine",
+                "text_2": "Stylish cafe chair",
+                "text3": "Rp 2.500.000",
+                "text4": "Rp 3.500.000",
+                "new": "-30%"
+                })
+            </a>
+
+
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/none",
+            "img2": "./assets/images/stul",
+            "text": "Leviosa",
+            "text_2": "Stylish cafe chair",
+            "text3": "Rp 2.500.000",
+            "text4": "",
+            "new": ""
+            })
+
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/Ellipse3",
+            "img2": "./assets/images/divan2",
+            "text": "Lolito",
+            "text_2": "Luxury big sofa",
+            "text3": "Rp 7.000.000",
+            "text4": "Rp 14.000.000",
+            "new": "-50%"
+            })
+
+            @@include('../components/_card2.html', {
+            "img": "./assets/images/zel_crug",
+            "img2": "./assets/images/divan3",
+            "text": "Respira",
+            "text_2": "Outdoor bar table and stool",
+            "text3": "Rp 500.000",
+            "text4": "",
+            "new": "New"
+            })
+        </div>
+    </div>
+    <div class="button_choice">
+        @@include('../components/_button_number_active.html', {
+        "text": "1"
+        })
+        @@include('../components/_button_number_passive.html', {
+        "text": "2"
+        })
+        @@include('../components/_button_number_passive.html', {
+        "text": "3"
+        })
+        @@include('../components/_button_number_next.html', {
+        "text": "Next"
+        })
+    </div>
+</section>
+<div class="block_benefits">
+    @@include('../components/_benefits.html',)
+</div>
+<DIV>
+    @@include('../components/_footer.html')
+</DIV>
 </body>
 </html>
